Start of controller split